Fix footer layout on small width.

--- a/css/styles.css
+++ b/css/styles.css
@@ -138,5 +138,6 @@ div {
     }
     .footerCell {
         display: block;
+        width: 100%;
     }
 }
